# rust_lemmatizer2

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
